--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node-sass-chokidar": "^0.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
