--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
-    "cors": "^2.8.3",
+    "cors": "^2.8.4",
     "express": "^4.15.3",
     "massive": "^3.0.0",
     "node-sass-chokidar": "^0.0.3",
@@ -13,6 +13,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-promise": "^0.5.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
