--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
-    "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
   },
