--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.15.3",
     "massive": "^3.0.0",
     "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
@@ -30,7 +31,8 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start": "react-scripts start",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
