--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "massive": "^3.0.0",
+    "moment": "^2.18.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
