--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.2",
     "massive": "^3.0.0",
     "moment": "^2.18.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "prettier": "^1.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -29,7 +32,14 @@
   "devDependencies": {
     "react-scripts": "1.0.10"
   },
+  "lint-staged": {
+      "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+       "git add"
+     ]
+   },
   "scripts": {
+    "precommit": "lint-staged",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
