included scss files to be precommit formated

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-scripts": "1.0.10"
   },
   "lint-staged": {
-      "src/**/*.{js,jsx,json,css}": [
+      "src/**/*.{js,jsx,json,css,scss}": [
       "prettier --single-quote --write",
        "git add"
      ]
